Opened 16 years ago

Closed 15 years ago

Last modified 15 years ago

#3198 closed bug (fixed)

System cursor often does not update at the correct time.

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Open Pe
Right click text view and select "Save"
Notice that cursor is I-beam

Attachments (1)

pe.png (107.7 KB ) - added by diver 15 years ago.

Download all attachments as: .zip

Change History (15)

comment:1 by scottmc, 15 years ago

Resolution: invalid
Status: newclosed

For Pe related bugs, please file bug reports on Pe's website: http://pe-editor.berlios.de/

I've opened this one over there, and closing it here.

comment:2 by stippi, 15 years ago

Component: User InterfaceServers/app_server
Resolution: invalid
Status: closedreopened

This is actually an app_server problem I recently introduced when I reworked the reference counting of server side cursor resources. It affects other parts of the system. For example, drag a folder from a non-boot partition into a Terminal while passing the Desktop with the mouse. Since the Desktop is on the boot volume, the cursor will change to indicate a file copy would take place if you dropped it there. In the Terminal, after releasing the mouse to drop the folder there, the copy cursor is still being displayed. The specific change I did which could have caused it is that ServerApp had a pointer to the current system cursor, but didn't have it's own reference, which means the pointer could go stale. Now it keeps the reference, which is correct, but seems to point at a problem in the code elsewhere.

comment:3 by stippi, 15 years ago

Summary: [Pe] I-beam cursor in save dialogSystem cursor often does not update at the correct time.

comment:4 by diver, 15 years ago

Still here in hrev35569.

comment:5 by stippi, 15 years ago

Resolution: fixed
Status: reopenedclosed

I thought Axel fixed this recently. And I cannot reproduce the problems I mentioned above anymore. Even when I right-click a document in Pe, the cursor immediately changes to the hand-cursor within the context menu. It changes back immediately to the beam-cursor when I leave the context menu and immediately back to the hand-cursor when I re-enter it. When I select Save, a file panel opens up, the cursor changes to beam as soon as I move the mouse. I would say this bug is fixed and the remaining issue is a Pe issue. If there even is one. I cannot reproduce the original issue at least.

by diver, 15 years ago

Attachment: pe.png added

comment:6 by diver, 15 years ago

Look at the "Save" button. This bug is still reproducible for me.

comment:7 by stippi, 15 years ago

Resolution: fixed
Status: closedreopened

Yes, I can reproduce it now, thanks for the screenshot. The save panel consistently seems to be using the beam-cursor. If you move the pointer out of the panel, it changes to the system cursor (not above the Pe document of course), and back to the beam cursor when moved back over the panel. This is not the issue I pointed out in comment 2.

comment:8 by stippi, 15 years ago

Just thought of this: If Pe uses the BApplication to set the cursor, then it's indeed a Pe bug (since that's application wide). It should use BView::SetViewCursor. Would have to check the souce, leaving open until me or someone does.

comment:9 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

comment:10 by axeld, 15 years ago

Resolution: fixed
Status: reopenedclosed

This is indeed a Pe bug, not very surprising, though, as it works everywhere else.

in reply to:  10 comment:11 by jackburton, 15 years ago

Replying to axeld:

This is indeed a Pe bug, not very surprising, though, as it works everywhere else.

Although I think I've seen such a problem within BTextView too. When moving from selected to non-selected text and vice-versa, the cursor isn't changed correctly.

comment:12 by stippi, 15 years ago

In Beam it works fine. In other BTextViews, it seems to upate after a while, which could be due to SetViewCursor() not being called with the "immediate" flag. Then it happens whenever the link flushes.

comment:13 by axeld, 15 years ago

I guess we should just change that, then (ie. set the immediate flag).

comment:14 by stippi, 15 years ago

Done in hrev35956. (Untested.)

Note: See TracTickets for help on using tickets.