Always sync the view cursor immediately, not only when entering the view. Should fix the remaining issues pointed out in #3198.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35946 a95241bf-73f2-0310-859d-f6bbb57e9c96